# vigil

./: .gitignore  Cargo.toml  README.md  changelog.md  developer_guidelines.md  prd.md  spec.md  task_list.md
.agent/skills/: code-agent.md  code-review.md
.claude/: settings.local.json
.claude/skills/: code-agent.md  code-review.md
crates/backutil/: Cargo.toml
crates/backutil-daemon/: Cargo.toml
crates/backutil-daemon/src/: executor.rs  lib.rs  main.rs  manager.rs  watcher.rs
crates/backutil-daemon/tests/: integration_test.rs  ipc_integration_test.rs  restic_test.rs
crates/backutil-lib/: Cargo.toml
crates/backutil-lib/src/: config.rs  ipc.rs  lib.rs  paths.rs  types.rs
crates/backutil/src/: main.rs
crates/backutil/tests/: cli_backup_test.rs  cli_check_test.rs  cli_global_flags_test.rs  cli_init_test.rs  cli_list_test.rs  cli_logs_test.rs  cli_mount_test.rs  cli_multi_test.rs  cli_setup_test.rs  cli_systemd_test.rs  cli_track_test.rs
crates/vigil/: Cargo.toml
crates/vigil-daemon/: Cargo.toml
crates/vigil-daemon/src/: executor.rs  main.rs  manager.rs  watcher.rs
crates/vigil-daemon/tests/: integration_test.rs  ipc_integration_test.rs  restic_test.rs
crates/vigil-lib/: Cargo.toml
crates/vigil-lib/src/: config.rs  ipc.rs  lib.rs  paths.rs  types.rs
crates/vigil/src/: main.rs
crates/vigil/tests/: cli_backup_test.rs  cli_check_test.rs  cli_global_flags_test.rs  cli_init_test.rs  cli_list_test.rs  cli_logs_test.rs  cli_mount_test.rs  cli_multi_test.rs  cli_setup_test.rs  cli_systemd_test.rs  cli_track_test.rs
