[workspace]
resolver = "2"
members = [
    "crates/backutil-lib",
    "crates/backutil-daemon",
    "crates/backutil",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
notify = "6"
notify-rust = "4"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
directories = "5"
tempfile = "3"
libc = "0.2"
globset = "0.4"
rpassword = "7"
assert_cmd = "2"
predicates = "3"
