[package]
name = "backutil-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
backutil-lib = { path = "../backutil-lib" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
notify.workspace = true
notify-rust.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
