[package]
name = "backutil-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
backutil-lib = { path = "../backutil-lib" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
notify.workspace = true
notify-rust.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono.workspace = true
anyhow.workspace = true
libc.workspace = true
globset.workspace = true
tracing-appender = "0.2"
time.workspace = true
tokio-util = { version = "0.7" }

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true
