[package]
name = "backutil"
version = "0.1.0"
edition = "2021"

[dependencies]
backutil-lib = { path = "../backutil-lib" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
anyhow.workspace = true
rpassword.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
backutil-lib = { path = "../backutil-lib" }
assert_cmd.workspace = true
predicates.workspace = true
serial_test.workspace = true
libc.workspace = true
